# clans-rs

./: Cargo.toml  Dockerfile  README.md  docker-compose.yml  nginx.conf
keys/: psn.pem  rpcn.pem
responses/: clan_search.xml  create_clan.xml  get_blacklist.xml  get_clan_info.xml  get_clan_list.xml  get_member_list.xml  record_blacklist_entry.xml  requests.xml  send_invitation.xml
src/: database.rs  main.rs  utils.rs
src/routes/: admin.rs  announcements.rs  blacklist.rs  clans.rs  invites.rs  members.rs  mod.rs
src/structs/: mod.rs  requests.rs  responses.rs  ticket.rs
src/structs/entities/: announcement.rs  clan.rs  mod.rs  player.rs  ticket.rs
src/structs/requests/: admin.rs  announcements.rs  base.rs  blacklist.rs  clans.rs  invites.rs  members.rs  mod.rs
src/structs/responses/: admin.rs  base.rs  entities.rs  error.rs  mod.rs
