[package]
edition = "2021"

name = "clans-rs"
description = "A Rust implementation of the Sony Clans API for the PlayStation 3 system."
authors = ["ZephyrCodesStuff <zeph@zephs.me>"]
keywords = ["clans", "sony", "playstation", "ps3", "api"]
categories = ["api", "web"]

version = "1.1.0"
repository = "https://github.com/ZephyrCodesStuff/clans-rs"

license = "GPL-3.0"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.9.0"
base64 = "0.22.1"
chrono = { version = "0.4.38", features = ["serde"] }
dotenv = "0.15.0"
futures-util = "0.3.31"
log = "0.4.20"
mongodb = "3.1.0"
openssl = "0.10.68"
pretty_env_logger = "0.5.0"
rand = "0.8.5"
regex = "1.11.1"
serde = { version = "1.0.215", features = ["derive"] }
serde-xml-rs = "0.6.0"
xml-rs = "0.8.23"

# Configure the linters to be as fucking annoying as possible
[lints.clippy]
cargo = "deny"
all = "deny"
pedantic = "deny"
nursery = "deny"

correctness = "warn"
style = "warn"
complexity = "warn"
perf = "warn"

# Override some of the default lints
multiple_crate_versions = { level = "allow", priority = 1 }
cast_sign_loss = { level = "allow", priority = 1 }
cast_possible_truncation = { level = "allow", priority = 1 }

missing_docs_in_private_items = { level = "deny", priority = 1 }

[lints.rust]
unused_imports = "forbid"
